--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=PlayfairDisplay);
 * {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
